0.3.4
Tweaked makefiles to install global external tools correctly with correct permissions.
Added 'Find Next' to edit menu.
Fixed changed web links.
Fixed Find/Replace dialog blocking on first showing.
Fixed warnings for debian packagers.
Included plugins now respect CXXFLAGS/CPPFLAGS/LDFLAGS passed to configure.
Unstable plugins now have to be specifically enabled with the --enable-unstable-plugins option to ./configure.
Moved MacroPlugin to unstable-plugins.
Fixed not closing all tabs.
Added 'Macro' plugin.
Install instructions for OpenSuse added to INSTALL file.
Fixed symlinking to wrong files.
Fixed some files not being uninstalled properly.
Application icons now symlinked instead of installed.
Corrected installed icon sizes.
Tweaked .desktop files for compatability.
Added requested manpage.
Fixed defunct links in about box's for plugin's.
Fixed defunct links in about box.

0.3.3
Changed format of session files, made future proof.
Code clean.
Matched version numbers in included plugins with main version.
Save/Restore session now saves/restores main window size and position.
Session manager now uses kkedit's save/restore session routines.
Added 'Hide Tab' to keyboard shortcuts ( defaults to ^h, 'Delete Word Under Cursor' now defaults to ^d ).
Restored missing translations.
Moving a line or selection with keyboard now keeps line/selection on screen.
Session restore and session manager now remember visibilty of tabs.
Fixed refresh bug.
Added 'Show All Tabs' to edit menu.
Added 'Hide Tab' to tab popup menu.
Search boxes on toolbar now always active.
Fixed replace all when replace string contains find string.
Lowered version numbers for vte lib for older distros.
Fixed some minor gtk2/3 filename clashes.
Fixed losing bookmark positions when replace all, replace all ( regex ) and revert file.
Fixed not updating status bar after showing all instances replaced.
Speeded up replace all.
Status bar in gtk3 version now smaller.