@@ -1,1 +1,1 @@
-COMMONSRC = ../src/backclass.cpp ../src/bookmarks.cpp ../src/callbacks.cpp ../src/completion.cpp ../src/encoding.cpp ../src/files.cpp ../src/globals.cpp ../src/guis.cpp ../src/main.cpp ../src/navcallbacks.cpp ../src/pages.cpp ../src/pluginclass.cpp ../src/plugins.cpp ../src/searchcallbacks.cpp ../src/sliceclass.cpp ../src/spellcheck.cpp ../src/textbuffer.cpp
+COMMONSRC = ../src/backclass.cpp ../src/bookmarks.cpp ../src/callbacks.cpp ../src/completion.cpp ../src/encoding.cpp ../src/files.cpp ../src/globals.cpp ../src/guis.cpp ../src/internet.cpp ../src/main.cpp ../src/navcallbacks.cpp ../src/pages.cpp ../src/pluginclass.cpp ../src/plugins.cpp ../src/searchcallbacks.cpp ../src/sliceclass.cpp ../src/spellcheck.cpp ../src/textbuffer.cpp
