@@ -1,4 +1,5 @@
 0.3.4
+Updated email and web page links.
 Tweaked makefiles to install global external tools correctly with correct permissions.
 Added 'Find Next' to edit menu.
 Fixed changed web links.
